primeira versão da página inicial tomando forma

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title                    : "fredericobarros.com"
 subtitle                 : # "Frederico Barros"
 name                     : "Frederico Barros"
 description              : "Site de Frederico Barros, professor e pesquisador nas áreas de musicologia, história e sociologia"
-url                      : https://fredericobarros.com"
+url                      : https://fredmbarros.github.io/fredmbarros"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "fredmbarros/fredmbarros.github.io"
 teaser                   : "/assets/images/teaser.jpg"
