Mudei o tamanho o da fonte embaixo dos ícones do grid com <h5>

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes@4.16.5"
-remote_theme             : "benbalter/retlab"
+# remote_theme             : "benbalter/retlab"
 minimal_mistakes_skin    : "neon"
 
 # Site Settings
