--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 # main links
 main:
   - title: "Contato"
+    url: contact
+    description: "Clique aqui para deixar uma mensagem"
     url: contact.md
     description: "Clique aqui para deixar uma mensagem"
   # - title: "Aulas"
