add a broken link
linking to the .md file itself will be broken because it gets compiled to .html somewhere else.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,7 @@ main:
   - title: "Contato"
     url: contact
     description: "Clique aqui para deixar uma mensagem"
+  - title: "Broken Link"
     url: contact.md
     description: "Clique aqui para deixar uma mensagem"
   # - title: "Aulas"
