add another example page
The url will match the name of the file, without the file type

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
   - title: "Broken Link"
     url: contact.md
     description: "Clique aqui para deixar uma mensagem"
+  - title: "Contato 2"
+    url: contact-2
+    description: "Clique aqui para deixar uma mensagem"
   # - title: "Aulas"
   #  url: /_pages/aulas.md
   #  description: "Ementas, bibliografia e materiais de disciplinas que estou oferecendo no semestre corrente"
