Site bem adiantado agora. Falta completar as páginas para ter o básico. Em seguida, expando a grade da página inicial, arrumo a parte de posts e a barra lateral nas páginas e faço o formulário de contato (importante).

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Contato"
-    url: contact.md
+    url: /contato
     description: "Clique aqui para deixar uma mensagem"
   # - title: "Aulas"
   #  url: /_pages/aulas.md
