--- a/_config.yml
+++ b/_config.yml
@@ -129,6 +129,9 @@ author:
 # Site Footer
 footer:
   links:
+    - label: "Contato"
+      icon: "fas fa-envelope-square"
+      url: "contato"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/fredmbarros"
