Ajustando o formulário de contato - está dando algum problema no formspree

--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -289,7 +289,7 @@ pt-BR:
   date_label                 : "Atualizado em:"
   comments_label             : "Deixar comentário"
   comments_title             : "Comentários"
-  more_label                 : "Saiba mais"
+  more_label                 : "..."
   related_label              : "Relacionado"
   follow_label               : "Seguir:"
   feed_label                 : "Feed"
