favicon no _config.yml
limei o favicon do default.html

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ logo                     : "/assets/images/site-logo.png"
 masthead_title           : "Frederico Barros"
 breadcrumbs              : false
 words_per_minute         : 200
+favicon                  : "/assets/images/favicon.png"
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
